Fix text rendering for wrapped.getFirst() in PDF export